@@ -2,6 +2,7 @@ version 0.6.2cvs
 
 - no longer strip colour/style codes from messages
 - compiles with -ansi and -pedantic
+- added protocol documentation
 
 18-10-2002: version 0.6.1
 
